# RVizSelect3DTool

./: .gitignore  README.md
obj_region_selection/: CMakeLists.txt  obj_region_selection_plugin_description.xml  package.xml
obj_region_selection/include/: obj_region_selection_display.hpp  ogre_mesh_plugin.cpp  ogre_mesh_plugin.hpp
obj_region_selection/interfaces/msg/: SendMeshInfo.msg
obj_region_selection/interfaces/srv/: SendMeshTexture.srv  ToggleService.srv
obj_region_selection/src/: obj_region_selection_display.cpp
obj_region_selection/test_parts/: PartMeshMaterial.material
rviz_selection_3d/: CMakeLists.txt  package.xml  select_3d_tool_plugin_description.xml
rviz_selection_3d/include/: select_3d_tool.hpp
rviz_selection_3d/interfaces/msg/: CameraData.msg  Selection3D.msg  SelectionRegion.msg
rviz_selection_3d/src/: select_3d_tool.cpp
